--- a/4-Deployment/2-deploy-static/App/.env
+++ b/4-Deployment/2-deploy-static/App/.env
@@ -1,4 +1,4 @@
-REACT_APP_AAD_APP_CLIENT_ID=
-REACT_APP_AAD_APP_TENANT_ID=
-REACT_APP_AAD_APP_REDIRECT_URI=  
-REACT_APP_AAD_APP_FUNCTION_SCOPE_URI=
+REACT_APP_AAD_APP_CLIENT_ID=8f148966-c661-4a01-8021-256b72957274
+REACT_APP_AAD_APP_TENANT_ID=171beed9-e95d-43b7-8bdc-54cd53b9d132
+REACT_APP_AAD_APP_REDIRECT_URI=http://localhost:3000
+REACT_APP_AAD_APP_FUNCTION_SCOPE_URI=api://8f148966-c661-4a01-8021-256b72957274
